[gd_scene load_steps=6 format=3 uid="uid://7axmy236krpp"]

[ext_resource type="Script" path="res://scripts/terrarium.gd" id="1_7mnry"]
[ext_resource type="Texture2D" uid="uid://c7xyjmw1pv4hg" path="res://images/backgrounds/terrarium.png" id="2_34h2l"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fea4h"]
texture = ExtResource("2_34h2l")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1raw8"]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0562916, 0.0562916, 0.0562915, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mkn4v"]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0562916, 0.0562916, 0.0562915, 1)

[node name="terrarium" type="Node2D"]
script = ExtResource("1_7mnry")

[node name="Panel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxTexture_fea4h")

[node name="itemsPanel" type="Panel" parent="."]
offset_left = 120.0
offset_top = 88.0
offset_right = 504.0
offset_bottom = 368.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1raw8")

[node name="MoneyLabel" type="Label" parent="itemsPanel"]
layout_mode = 0
offset_left = 144.0
offset_top = 80.0
offset_right = 240.0
offset_bottom = 128.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="FoodLabel" type="Label" parent="itemsPanel"]
layout_mode = 0
offset_left = 144.0
offset_top = 128.0
offset_right = 248.0
offset_bottom = 184.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="fungusPanel" type="Panel" parent="."]
offset_left = 648.0
offset_top = 88.0
offset_right = 1032.0
offset_bottom = 368.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mkn4v")

[node name="FungusLabel" type="Label" parent="fungusPanel"]
layout_mode = 2
offset_left = 136.0
offset_top = 32.0
offset_right = 280.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="fungusPanel"]
layout_mode = 0
offset_left = 136.0
offset_top = 88.0
offset_right = 280.0
offset_bottom = 200.0

[node name="LevelLabel" type="Label" parent="fungusPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="StaminaLabel" type="Label" parent="fungusPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="LevelUp" type="Label" parent="fungusPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="."]
offset_right = 88.0
offset_bottom = 40.0
text = "Go Home"

[node name="BuyFood" type="Button" parent="."]
offset_left = 264.0
offset_top = 272.0
offset_right = 368.0
offset_bottom = 328.0
text = "Buy Food"

[node name="LevelUp" type="Button" parent="."]
offset_left = 792.0
offset_top = 272.0
offset_right = 896.0
offset_bottom = 328.0
text = "Level up"

[node name="Label" type="Label" parent="."]
offset_left = 240.0
offset_top = 112.0
offset_right = 396.0
offset_bottom = 144.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "20 Mushies = 1 Food"

[node name="FungusSelect" type="Button" parent="."]
offset_left = 536.0
offset_top = 192.0
offset_right = 616.0
offset_bottom = 232.0
text = "Fungus
Selection"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="BuyFood" to="." method="_on_buy_food_pressed"]
[connection signal="pressed" from="LevelUp" to="." method="_on_level_up_pressed"]
[connection signal="pressed" from="FungusSelect" to="." method="_on_fungus_select_pressed"]
